Se realiza modificación en la referenciación de los links en las páginas de activities, dashboard, index y reports

--- a/Html/Dashboard.html
+++ b/Html/Dashboard.html
@@ -11,12 +11,12 @@
         <nav>
             <div class="logo">Centro de Acopio</div>
             <ul>
-                <li><a href="../Dashboard.html">Dashboard</a></li>
-                <li><a href="../Reports.html">Reportes</a></li>
-                <li><a href="../Activities.html">Actividades</a></li>
-                <li><a href="../Teams.html">Equipos</a></li>
-                <li><a href="../Materials.html">Materiales</a></li>
-                <li><a href="../Index.html" id="logout">Cerrar Sesión</a></li>
+                <li><a href="./Dashboard.html">Dashboard</a></li>
+                <li><a href="./Reports.html">Reportes</a></li>
+                <li><a href="./Activities.html">Actividades</a></li>
+                <li><a href="./Teams.html">Equipos</a></li>
+                <li><a href="./Materials.html">Materiales</a></li>
+                <li><a href="./Index.html" id="logout">Cerrar Sesión</a></li>
             </ul>
         </nav>
     </header>
