--- a/Html/Index.html
+++ b/Html/Index.html
@@ -12,8 +12,8 @@
             <div class="logo">Centro de Acopio</div>
             <ul>
                 <li><a href="#">Inicio</a></li>
-                <li><a href="/Frontend/Html/Login.html">Iniciar Sesión</a></li>
-                <li><a href="/Frontend/Html/Register.html">Registrarse</a></li>
+                <li><a href="./Login.html">Iniciar Sesión</a></li>
+                <li><a href="./Register.html">Registrarse</a></li>
             </ul>
         </nav>
     </header>
