--- a/Html/Activities.html
+++ b/Html/Activities.html
@@ -11,12 +11,12 @@
         <nav>
             <div class="logo">Centro de Acopio</div>
             <ul>
-                <li><a href="dashboard.html">Dashboard</a></li>
-                <li><a href="reportes.html">Reportes</a></li>
-                <li><a href="actividades.html">Actividades</a></li>
-                <li><a href="equipos.html">Equipos</a></li>
-                <li><a href="materiales.html">Materiales</a></li>
-                <li><a href="usuarios.html">Usuarios</a></li>
+                <li><a href="./dashboard.html">Dashboard</a></li>
+                <li><a href="./reportes.html">Reportes</a></li>
+                <li><a href="./actividades.html">Actividades</a></li>
+                <li><a href="./equipos.html">Equipos</a></li>
+                <li><a href="./materiales.html">Materiales</a></li>
+                <li><a href="./usuarios.html">Usuarios</a></li>
                 <li><a href="#" id="logout">Cerrar Sesión</a></li>
             </ul>
         </nav>
