se agregan link a demas paginas para interaccion

--- a/Html/Login.html
+++ b/Html/Login.html
@@ -8,7 +8,14 @@
 </head>
 <body>
     <header>
-        <!-- Mismo encabezado que en index.html -->
+        <nav>
+            <div class="logo">Centro de Acopio</div>
+            <ul>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="./Login.html">Iniciar Sesión</a></li>
+                <li><a href="./Register.html">Registrarse</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
